# UFEP-Released

./: CMakeLists.txt  README.md  package.xml
config/: parameters.yaml  parameters_UnitreeA1.yaml  parameters_UnitreeGo2.yaml
include/ikd-Tree/: ikd_Tree.h
include/vrmapping/: FrontierExtract.h  GraphBase.h  IdPool.h  PathPlanner.h  PathTracker.h  Sampler.h  UndirectedMap.h  VRGraphManager.h  partition_helper.h  union_find.h  vrmapping.h
include/vrmapping/Integrator/: CellsIntegrator.h  CellsIntegratorUtils.cuh  Integrator.h  IntegratorUtils.h
launch/: vrmapping.launch  vrmapping_UnitreeA1.launch  vrmapping_UnitreeA1_nogdb.launch  vrmapping_UnitreeGo2.launch  vrmapping_nogdb.launch
rviz/: vrm.rviz  vrm_UnitreeA1.rviz
src/: FrontierExtract.cpp  IdPool.cpp  PathPlanner.cpp  PathTracker.cpp  Sampler.cpp  UndirectedMap.cpp  VRGraphManager.cpp  partition_helper.cpp  union_find.cpp  vrmapping.cpp  vrmapping_node.cpp
src/Integrator/: CellsIntegrator.cu  Integrator.cpp  IntegratorUtils.cpp
